Added more data to Swagger Documentation
